[package]
name = "ft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive", "serde_derive"] }
tokio = { version = "1.28.1", features = ["full"] }
